# aurorae-localmenu

./: CMakeLists.txt  ReadMe.md  appmenuplugin.cpp  appmenuthing.cpp  appmenuthing.h  qmldir
aurorae/: aurorae.qml  install.sh
test/: runtest.sh  testlocalmenu.qml
